[package]
name = "midnight-primitives-native-token-observation"
version = "0.1.0"
edition = "2024"
description = "Midnight native token observation primitives"
license-file.workspace = true

[dependencies]
sp-api.workspace = true
sp-inherents.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
serde = { workspace = true , optional = true }
hex = { workspace = true }
thiserror = { workspace = true, optional = true }
sidechain-domain.workspace = true
sqlx = { workspace = true,  optional = true, features = ["chrono"] }

[features]
default = ["std"]
std = [
    "hex/serde",
    "hex/std",
    "sp-api/std",
    "sp-inherents/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde",
    "sqlx",
    "thiserror",
    "sidechain-domain/std"
]
