[package]
name = "midnight-primitives-upgrade-api"
version = "0.1.0"
edition = "2024"
description = "Midnight runtime api for upgrade information messages"

[dependencies]
sp-api = { workspace = true, default-features = false }
sp-core.workspace = true

[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-core/std"
]
