[package]
name = "midnight-node-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "midnight-node-e2e"
path = "src/main.rs"

[dependencies]
hex.workspace = true
cardano-serialization-lib.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
whisky = { git = "https://github.com/ozgb/whisky", rev = "9cd916b8eb2cbb17ec6561c69ed285dcd3ad446a" }
tiny-bip39 = "2.0.0"
ogmios-client = { path = "ogmios-client" }
serde = { workspace = true, features = ["derive"] }
config = "0.13"
serde_json.workspace = true
rand = "0.9.2"
uplc = "1.1.9"

# sidechain-domain = { path = "sidechain-domain" }

# [workspace.dependencies]
# anyhow = "1.0.81"
# hex = { version = "0.4.3", features = ["alloc"], default-features = false }
# hex-literal = "1.0.0"
# tokio = { version = "1.46", features = ["rt-multi-thread", "macros"] }
# fraction = { version = "0.15.3", default-features = false }
# jsonrpsee = { version = "0.24", features = ["client-core", "server", "macros"] }
# serde = { version = "1.0.209", default-features = false, features = [
# 	"derive",
# 	"alloc",
# ] }
# serde_json = { version = '1.0.132', default-features = false, features = [
# 	"alloc",
# ] }
# thiserror = { version = "2.0", default-features = false }
# time = { version = "0.3.36", default-features = false }
# log = { version = "0.4", default-features = false }
