[package]
name = "midnight-node-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "midnight-node-e2e"
path = "src/main.rs"

[dependencies]
hex.workspace = true
cardano-serialization-lib.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
whisky = { git = "https://github.com/ozgb/whisky", rev = "9cd916b8eb2cbb17ec6561c69ed285dcd3ad446a" }
tiny-bip39 = "2.0.0"
ogmios-client = { git = "https://github.com/input-output-hk/partner-chains", tag = "v1.7.1" }
serde = { workspace = true, features = ["derive"] }
config = "0.13"
serde_json.workspace = true
rand = "0.9.2"
uplc = "1.1.9"
subxt.workspace = true
midnight-node-metadata.workspace = true
