[package]
name = "pallet-midnight-rpc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee  = { workspace = true, features = [ "client", "server", "macros" ] }
serde     .workspace = true
serde_json.workspace = true
log.workspace = true
hex.workspace = true

sc-client-api.workspace = true
sp-api.workspace = true
sp-runtime.workspace = true
sp-blockchain.workspace = true
midnight-node-ledger.workspace = true
midnight-node-runtime = { workspace = true, default-features = true }
pallet-midnight.workspace = true

[dev-dependencies]
assert_matches.workspace = true
midnight-node-res.workspace = true

[lints]
workspace = true
